# parsec-code-parsec-01

./: .gitignore  README.md
test_webcam_opencv30/: .cproject  .project  CMakeLists.txt  demo_openmp.cpp  lib.cpp  lib.h  main_TK1.cpp  main_nano.cpp  main_openfile.cpp
test_webcam_opencv30/Release/: CMakeCache.txt  Makefile  camera_test  cmake_install.cmake
